<resources>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">5OPDgxPnwuMkhFtkZfJmNDJj7</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">q2vCmYnI2h3ah2pjzAQYwipiQVskEZjkFAH83wJ3OaDglhDcaF</string>
    <string name="app_name">Signal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="feed_no_items">You currently doesn\'t have any feed.\nTry again later</string>
    <string name="mentions_no_items">No mentions yet</string>
    <string name="compose_default_title">Tweet</string>
    <string name="compose_default_hint">A long time ago...</string>
    <string name="time_seconds">s</string>
    <string name="time_minutes">m</string>
    <string name="time_hours">h</string>
    <string name="time_days">d</string>
    <string name="time_weeks">w</string>
    <string name="time_monthes">m</string>
    <string name="time_years">y</string>
    <string name="message_send_hint">Message</string>
    <string name="logged_choose_accounts">Accounts</string>
    <string name="settings_tb_title">Settings</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_timeline">Timeline</string>
    <string name="settings_gestures">Gestures</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_advanced">Advanced</string>
    <string name="settings_help">Help</string>
    <string name="settings_about">About</string>
    <string name="settings_support">Support Signal</string>
    <string name="help_link">https://getsignal.co/tips</string>
    <string name="tweet_preview">PREVIEW</string>
    <string name="settings_appearance_time">2m</string>
    <string name="settings_appearance_username">SIGNAL</string>
    <string name="settings_appearance_text">Thanks for purchasing Signal! If you love the app please leave it a nice rating on the store getsignal.co</string>
    <string name="settings_appearance_font_size">Font size</string>
    <string name="settings_appearance_media_preview">Thumbnails</string>
    <string name="settings_appearance_night_mode">Dark mode</string>
    <string name="settings_appearance_real_names">Real names</string>
    <string name="settings_appearance_relative_dates">Relative dates</string>
    <string name="debug_tweet_image_url_1">http://www.greycloaktech.com/wp-content/uploads/2015/07/url-small.jpg</string>
    <string name="debug_tweet_text_1">Thank everyone who purchased @getsignal yesterday! Please take a minute to leave us a nice rating on @GooglePlay. Visit getsignal.co for details #android #hashtag</string>
    <string name="debug_tweet_text_2">Долгожданный альбом Radiohead \"A Moon Shaped Pool\" уже доступен для вас! #музыка @googleplay</string>
    <string name="debug_tweet_text_3">How and why we built the Marvel Styleguide - by @colmtuite buff.ly/2aAres0</string>
    <string name="debug_tweet_text_4">And if it\'s not good, it will at least be funny</string>
    <string name="debug_tweet_text_5">\@solonsky Need to make sure the Labels group is hidden, then exporting will include the all icons image</string>
    <string name="debug_tweet_text_6">\@jb Thanks for the feedback v1.3 adds an All icons slice to the Sketch templates</string>
    <string name="debug_tweet_icon_1">https://cdn2.iconfinder.com/data/icons/ballicons-2-vol-2/100/caps_shield-512.png</string>
    <string name="debug_tweet_icon_2">https://cdn4.iconfinder.com/data/icons/free-colorful-icons/360/google_play.png</string>
    <string name="debug_tweet_icon_3">https://marvelapp.com/static/assets/images/default-new-icon.png</string>
    <string name="debug_tweet_icon_4">https://pbs.twimg.com/profile_images/692501547540938753/-4lk9HMW.png</string>
    <string name="debug_tweet_image_url_2">http://www.myfavoriteshot.com/uploads/5/9/1/5/5915160/3072828_orig.jpg</string>
    <string name="debug_tweet_image_url_3">https://blog.openshift.com/wp-content/uploads/soltysh_512.png</string>
    <string name="debug_tweet_text_7">\@solonsky @Hairessy don\'t you have a trick for hearts? Lay it on us =o)</string>
    <string name="debug_tweet_text_8">If only Apple had the technology to sync what song i\'m currently playing on my Mac to my Phone. https://geo.itunes.apple.com/us/app...</string>
    <string name="debug_tweet_text_9">I\'m currently playing on my Mac to my Phone. https://geo.itunes.apple.com/us/app...</string>
    <string name="debug_tweet_icon_5">https://assets.materialup.com/uploads/26ec4915-8400-4e0d-8768-1e1644b49490/QBp-fP7LCWjl1zya5IxEfnypL__RXmymIAQmRiSv5aSzzWUdPcpdvAodBJmXbGm3d7HI=w300</string>
    <string name="debug_tweet_icon_6"><![CDATA[https://avatars1.githubusercontent.com/u/163410?v=3&s=460]]></string>
    <string name="debug_tweet_icon_7">http://sketchhunt.com/wp-content/uploads/2015/04/cropped-favicon@2x.png</string>
    <string name="debug_tweet_icon_8">https://pbs.twimg.com/profile_images/634035372733898752/6aSBCDd9.jpg</string>
    <string name="debug_tweet_icon_9">https://pbs.twimg.com/profile_images/1740491952/n29703117_35068293_2116.jpeg</string>
    <string name="debug_tweet_icon_10">https://pbs.twimg.com/profile_images/804540593678356480/49eEdF1w.jpg</string>
    <string name="debug_tweet_icon_11">https://lh3.googleusercontent.com/-phz3HgFNsVI/AAAAAAAAAAI/AAAAAAAAABs/3WzH4blFmVU/photo.jpg</string>
    <string name="debug_tweet_icon_12">https://tvou.imgix.net/userPhotos/jess-ruyter-profile-thumbnail.jpg?auto=format</string>
    <string name="debug_tweet_icon_13">https://pbs.twimg.com/profile_images/627342079010709504/DBaKFNn8.jpg</string>
    <string name="debug_tweet_icon_14">https://pbs.twimg.com/profile_images/1111550516/twitter-logo_400x400.png</string>
    <string name="settings_appearance_round_avatars">Round avatars</string>
    <string name="settings_timeline_static_top">Static top bar</string>
    <string name="settimgs_timeline_static_bottom">Static bottom bar</string>
    <string name="settings_timeline_static_group_dialog">Group dialogs</string>
    <string name="settings_timeline_static_show_mentions">Show mentions</string>
    <string name="settimgs_timeline_static_show_retweets">Show retweets</string>
    <string name="settings_timeline_static_tweet_marker">Tweet Marker</string>
    <string name="settings_timeline_static_wifi_stream">Stream on Wi-Fi</string>
    <string name="settings_gestures_short">Short tap</string>
    <string name="settings_gestures_long">Hold and release</string>
    <string name="settings_gestures_double">Double tap</string>
    <string name="settings_advanced_default">Reset app settings</string>
    <string name="settings_advanced_clear">Clear all settings</string>
    <string name="settings_advanced_dim_media">Dim media at night</string>
    <string name="settings_advanced_group_push">Group push notifications</string>
    <string name="settings_advanced_pin_top">Pin to top on streaming</string>
    <string name="settings_advanced_sounds">Sounds</string>
    <string name="about_learn_more">LEARN MORE</string>
    <string name="about_authors">FOLLOW AUTHORS</string>
    <string name="about_apps">OUR APPS</string>
    <string name="about_website">Website</string>
    <string name="about_website_subtitle">getsignal.co</string>
    <string name="package_name" />
    <string name="about_twitter">Twitter</string>
    <string name="about_twitter_subtitle">News and Updates</string>
    <string name="about_client">Alex Solonsky</string>
    <string name="about_client_subtitle">Design</string>
    <string name="about_author">Alex Gladkov</string>
    <string name="about_author_subtitle">Development</string>
    <string name="about_apps_saver">Saver</string>
    <string name="about_apps_saver_subtitle">iOS</string>
    <string name="support_main_title">Support Us</string>
    <string name="support_main_subtitle_bought">Thanks for helping us! And kudos to every person who tipped more than once.\nWe love you too.</string>
    <string name="support_main_subtitle">We need your help to keep Signal alive. Please consider tipping to support its future development. Thanks in advance.</string>
    <string name="support_tips_unlock">Each tip unlocks 1&#8211;3 perks respectively:</string>
    <string name="support_tip_vote">Vote for new features</string>
    <string name="support_tip_priority">Get priority support</string>
    <string name="support_tip_beta">Join private beta</string>
    <string name="support_cant_tip">If you can\'t pay — support us by leaving</string>
    <string name="support_cant_subline">a nice review</string>
    <string name="support_restore">Restore Purchase</string>
    <string name="support_users_tipped">fans tipped</string>
    <string name="about_subline">Made by people who make apps for a living.\nThanks for purchasing our apps.</string>
    <string name="settings_users_notifications_mentions">Mentions</string>
    <string name="settings_users_notifications_messages">Messages</string>
    <string name="settings_users_notifications_likes">Likes</string>
    <string name="settings_users_notifications_retweets">Retweets</string>
    <string name="settings_users_notifications_quotes">Quotes</string>
    <string name="settings_users_notifications_followers">Followers</string>
    <string name="settings_users_notifications_lists">Lists</string>
    <string name="settings_users_notifications_sound">Sound</string>
    <string name="settings_users_notifications_vibration">Vibration</string>
    <string name="notifications_replied">replied</string>
    <string name="notifications_retweeted">retweeted</string>
    <string name="notifications_liked">liked</string>
    <string name="notifications_followed">followed you</string>
    <string name="notifications_listed">listed</string>
    <string name="mute_users">USERS</string>
    <string name="mute_keywords">KEYWORDS</string>
    <string name="mute_hashtags">HASHTAGS</string>
    <string name="mute_clients">CLIENTS</string>
    <string name="mute_bottom">Muted stuff disappears from your Timeline. \nNotifications, mentions and messages stay intact.</string>
    <string name="dialog_reply">Reply</string>
    <string name="dialog_send_message">Send message</string>
    <string name="dialog_disable_retweets">Disable retweets</string>
    <string name="dialog_mute">Mute</string>
    <string name="dialog_follow">Follow</string>
    <string name="dialog_copy">Copy</string>
    <string name="dialog_tweet_tag">Tweet this tag</string>
    <string name="search_save">Save search</string>
    <string name="search_show_popular">Show popular</string>
    <string name="search_images">Images</string>
    <string name="search_video">Video</string>
    <string name="search_links">Links</string>
    <string name="search_include_retweets">Include retweets</string>
    <string name="search_include_mentions">Include mentions</string>
    <string name="dialog_unfollow">Unfollow</string>
    <string name="mute_no_users">No users muted</string>
    <string name="mute_no_keywords">No keywords muted</string>
    <string name="mute_no_hashtags">No hashtags muted</string>
    <string name="mute_no_clients">No clients muted</string>
    <string name="profile_reply">Reply</string>
    <string name="profile_direct">Send message</string>
    <string name="profile_follow">Follow</string>
    <string name="profile_unfollow">Unfollow</string>
    <string name="profile_disable_retweets">Disable retweets</string>
    <string name="profile_enable_retweets">Enable retweets</string>
    <string name="profile_mute">Mute</string>
    <string name="profile_unmute">Unmute</string>
    <string name="profile_block">Block</string>
    <string name="profile_report">Report</string>
    <string name="profile_unblock">Unblock</string>
    <string name="dialog_unmute">Unmute</string>
    <string name="dialog_enable_retweets">Enable retweets</string>
</resources>