<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="model" type="solonsky.signal.twitter.viewmodels.MuteViewModel" />
        <import type="android.view.View" alias="v" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:paddingTop="@dimen/default_toolbar_margin_top"
        android:clipToPadding="false"
        android:background="?attr/backgroundSecondaryColor" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mute_users"
                android:fontFamily="sans-serif"
                android:layout_marginTop="@dimen/mute_text_top"
                android:layout_marginStart="@dimen/mute_text_start"
                android:textSize="12dp"
                android:textStyle="bold"
                android:includeFontPadding="false"
                android:textColor="?attr/secondaryTextColor"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="?attr/dividerColor"
                android:layout_marginTop="@dimen/mute_recycler_top" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_mute_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:visibility="@{model.hasUsers ? v.VISIBLE : v.GONE}"
                app:listConfig="@{model.usersConfig}"/>
            
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:visibility="@{model.hasUsers ? v.GONE : v.VISIBLE}" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/backgroundPrimaryColor"
                    android:alpha="0.8" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textSize="16dp"
                    android:textStyle="italic"
                    android:textColor="?attr/hintTextColor"
                    android:text="@string/mute_no_users"
                    android:paddingStart="16dp"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="?attr/dividerColor" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_marginStart="@dimen/mute_text_start"
                android:layout_marginTop="@dimen/mute_text_top"
                android:text="@string/mute_keywords"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="12dp"
                android:textStyle="bold"
                android:includeFontPadding="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="?attr/dividerColor"
                android:layout_marginTop="@dimen/mute_recycler_top" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_mute_keywords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:visibility="@{model.hasKeywords ? v.VISIBLE : v.GONE}"
                app:listConfig="@{model.keywordsConfig}"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:visibility="@{model.hasKeywords ? v.GONE : v.VISIBLE}" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/backgroundPrimaryColor"
                    android:alpha="0.8" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textSize="16dp"
                    android:textStyle="italic"
                    android:textColor="?attr/hintTextColor"
                    android:text="@string/mute_no_keywords"
                    android:paddingStart="16dp"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="?attr/dividerColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mute_hashtags"
                android:layout_marginTop="@dimen/mute_text_top"
                android:layout_marginStart="@dimen/mute_text_start"
                android:textSize="12dp"
                android:textStyle="bold"
                android:includeFontPadding="true"
                android:fontFamily="sans-serif"
                android:textColor="?attr/secondaryTextColor"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="?attr/dividerColor"
                android:layout_marginTop="@dimen/mute_recycler_top" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_mute_hashtags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:visibility="@{model.hasHashs ? v.VISIBLE : v.GONE}"
                app:listConfig="@{model.hashtagsConfig}"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:visibility="@{model.hasHashs ? v.GONE : v.VISIBLE}" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/backgroundPrimaryColor"
                    android:alpha="0.8"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textSize="16dp"
                    android:textStyle="italic"
                    android:textColor="?attr/hintTextColor"
                    android:text="@string/mute_no_hashtags"
                    android:paddingStart="16dp"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="?attr/dividerColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mute_clients"
                android:layout_marginTop="@dimen/mute_text_top"
                android:layout_marginStart="@dimen/mute_text_start"
                android:textSize="12dp"
                android:textStyle="bold"
                android:includeFontPadding="false"
                android:fontFamily="sans-serif"
                android:textColor="?attr/secondaryTextColor" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="?attr/dividerColor"
                android:layout_marginTop="@dimen/mute_recycler_top" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_mute_clients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:visibility="@{model.hasClients ? v.VISIBLE : v.GONE}"
                app:listConfig="@{model.clientsConfig}" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:visibility="@{model.hasClients ? v.GONE : v.VISIBLE}" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/backgroundPrimaryColor"
                    android:alpha="0.8" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textSize="16dp"
                    android:textStyle="italic"
                    android:textColor="?attr/hintTextColor"
                    android:text="@string/mute_no_clients"
                    android:paddingStart="16dp"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="?attr/dividerColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="12dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:lineSpacingMultiplier="1.14"
                android:layout_gravity="center_horizontal"
                android:textColor="?attr/secondaryTextColor"
                android:gravity="center"
                android:text="@string/mute_bottom"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>
